--- a/src/main/webapp/course-editor/course-editor.style.client.css
+++ b/src/main/webapp/course-editor/course-editor.style.client.css
@@ -7,6 +7,21 @@ html, body {
 }
 
 .wbdv-nav-col {
-    background-color: #292b2c;
+    /*background-color: #292b2c;*/
+    background-color: white;
+}
 
+input.transparent-input {
+    /*background-color:#292b2c !important;*/
+    outline: 0;
+    border-width: 0 0 1px;
+    border-color: #343a40;
+    /*-webkit-box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);*/
+    /*box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);*/
+}
+
+.wbdv-module-item-add-btn {
+    outline: 0;
+    border-width: 0 0 1px;
+    border-color: #343a40;
 }
