added widget (header)

--- a/src/main/webapp/course-editor/course-editor.style.client.css
+++ b/src/main/webapp/course-editor/course-editor.style.client.css
@@ -25,3 +25,7 @@ input.transparent-input {
     border-width: 0 0 1px;
     border-color: #343a40;
 }
+
+.wbdv-widget-header, .wbdv-module-item-title {
+    display: inline-block;
+}
